--- a/src/utilities/env/development.env.yml
+++ b/src/utilities/env/development.env.yml
@@ -18,3 +18,8 @@ logger:
 jwt:
     secret_key: "5fQkn(CRyCS2n&!y"
     expiration_time: "1h"
+
+openVidu:
+    host: "http://localhost"
+    port: 4443
+    secret: 'MY_SECRET'
