--- a/src/utilities/env/development.env.yml
+++ b/src/utilities/env/development.env.yml
@@ -21,6 +21,7 @@ jwt:
     expiration_time: "1h"
 
 openVidu:
-    host: "http://localhost"
+    # host: "http://localhost"
+    host: "http://192.168.100.241"
     port: 4443
     secret: 'MY_SECRET'
