--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "NODE_ENV=production nest start",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "start:docker": "NODE_ENV=docker node dist/main",
     "start:prod": "NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -34,6 +35,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "joi": "^17.7.0",
     "js-yaml": "^4.1.0",
     "mysql2": "^2.3.3",
     "ngx-socket-io": "^4.4.0",
