--- a/src/utilities/env/development.env.yml
+++ b/src/utilities/env/development.env.yml
@@ -1,13 +1,13 @@
 http:
-    host: "localhost"
+    host: "192.168.100.241"
     port: 3000
 
 db:
     mysql:
-        username: "root"
-        password: "root"
+        username: "service"
+        password: "password"
         host: 'localhost'
-        port: 8889
+        port: 3306
         database: "video_service"
 ws:
     port:
