--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed": "node dist/seeder/seeder"
+    "seed": "node dist/seeder/seeder",
+    "seed:refresh": "node dist/seeder/seeder --refresh"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
