--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "seed:refresh": "node dist/seeder/seeder --refresh"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.276.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -37,6 +38,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "file-system": "^2.2.2",
     "joi": "^17.7.0",
     "js-yaml": "^4.1.0",
     "mysql2": "^2.3.3",
@@ -59,7 +61,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "18.11.18",
+    "@types/node": "^18.11.18",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
