--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^9.0.0",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/swagger": "^6.1.4",
@@ -46,6 +46,7 @@
     "ngx-socket-io": "^4.4.0",
     "openvidu-node-client": "^2.25.0",
     "passport": "^0.6.0",
+    "passport-headerapikey": "^1.2.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
