--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
+    "nestjs-class-seeder": "^1.1.2",
     "nestjs-seeder": "^0.3.0",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
