--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "ssh2": "^1.11.0",
     "swagger-ui-express": "^4.6.0",
     "typeorm": "^0.3.11",
     "uuid": "^9.0.0"
@@ -66,6 +67,7 @@
     "@types/node": "^18.11.18",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/ssh2": "^1.11.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
